# colegio_optativa

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/: __init__.py  models.py
app/routes/: auth.py  student.py  teacher.py
app/static/css/: style.css
app/templates/: base.html
app/templates/auth/: login.html
app/templates/student/: dashboard.html  take_assessment.html
app/templates/teacher/: assessments.html  create_assessment.html  dashboard.html  form_assessment_edit.html  form_courses.html  form_subject.html  review_submissions.html  subjects.html
templates/: login.html
